# elobs-word-updater

./: .gitignore  CHANGE-LOG.md  LICENSE  NOTICES  README.md
core/: README.md  config.example.yaml  pyproject.toml
core/elobs_word_updater/: __init__.py  cli.py  config.py  updater.py
core/elobs_word_updater/api/: client.py
core/elobs_word_updater/auth/: base.py  factory.py  no_auth.py  oauth.py
core/elobs_word_updater/document/: content_controls.py  merger.py  properties.py  svg_embedder.py
core/scripts/: fetch_fixtures.py
core/templates/: ProtocolTemplate_OSB_1.1.docx
core/tests/: README.md  conftest.py  report.html  test_api_client.py  test_cli.py  test_content_controls.py  test_integration.py  test_merger.py  test_properties.py  test_svg_embedder.py
core/tests/dummy_api/: app.py
core/tests/fixtures/: _test_template.docx  flowchart.docx  flowchart_v1.docx  objectives_endpoints_study_000003.docx  objectives_endpoints_v1.docx  protocol_title_latest.json  protocol_title_v1.json  snapshot_history.json  studies.json  study_000001_latest.json  study_000001_v1.json  study_criteria_latest.json  study_criteria_v1.json
osb-api-extension/: README.md
osb-api-extension/elobs_word_updater_ext/: elobs_word_updater_ext_main.py  models.py  osb_direct_client.py
osb-api-extension/elobs_word_updater_ext/tests/: test_extension.py
osb-frontend-extension/: README.md
osb-frontend-extension/elobs-word-updater/api/: extensions.js
osb-frontend-extension/elobs-word-updater/router/: index.js
osb-frontend-extension/elobs-word-updater/stores/: app.js
(+2 files in other folders)
